gcc/testsuite/gcc.target/mips/soft-float-1.c
/* { dg-options "-msoft-float -ffat-lto-objects" } */

void
foo (void)
{
  register float x asm ("$f0"); /* { dg-error "cannot be accessed" } */
  asm volatile ("" : "=r" (x));
}
